# Credactor

./: .credredactorignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  credential_redactor.py  pyproject.toml  requirements-ci.in  requirements-ci.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
credactor/: __init__.py  __main__.py  _log.py  cli.py  config.py  gitignore.py  ingest.py  patterns.py  redactor.py  report.py  scanner.py  suppressions.py  types.py  utils.py  walker.py
credredactor/: __init__.py  __main__.py  cli.py  config.py  patterns.py  redactor.py  report.py  suppressions.py  walker.py
docs/: DISCLAIMER.md  ci_integration.md  examples.md  integration.md  manual.md  security.md  setup.md  user-guide.md
examples/: ci-credactor.yml
hooks/: pre-commit
scripts/: audit_wheel.py
tests/: conftest.py  test_audit_wheel.py  test_cli.py  test_config.py  test_detection_benchmark.py  test_gitignore.py  test_ingest.py  test_patterns.py  test_redactor.py  test_redactor_properties.py  test_report.py  test_safe_values.py  test_scanner.py  test_security.py  test_suppressions.py  test_walker.py
tests/benchmark/: corpus.py
