[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "credredactor"
version = "2.0.0"
description = "Scan and redact hardcoded credentials in source code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Rx" },
]
keywords = ["security", "credentials", "secrets", "scanner", "redactor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
encoding = ["charset-normalizer>=3.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
credredactor = "credredactor.cli:main"

[project.urls]
Repository = "https://github.com/Rx/CredRedactor"

[tool.setuptools.packages.find]
include = ["credredactor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
